--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,16 @@
+{% load  static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href={% static 'css/bulma.min.css' %}>
   <title>{% block title %}Habit Tracker{% endblock title %}</title>
 </head>
 <body>
+  <div class="container">
   {% block content %} {% endblock content %}
+  </div>
 </body>
 </html>
