--- a/templates/habit_tracker/habit_list.html
+++ b/templates/habit_tracker/habit_list.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1 class="title">Habit List</h1>
+<h1 class="title is-size-1">Habit Tracker 🐾</h1>
 <section class="section habit-list">
+  <h2 class="title is-size-2">Habits You're Building<h2>
   <ul class="habit-list">
     {% for habit in habits %}
     <li class="habit-item"><a href="">{{habit.name}}</a></li>
     {% endfor %}
   <ul>
+</section>
+<section class="section habit-form">
+  <h2 class="title is-size-3">Add a new habit to the list!</h2>
+  {% include 'habit_tracker/_habit_form.html'%}
 </section>
 {% endblock content %}
